--- a/css/styling.css
+++ b/css/styling.css
@@ -19,7 +19,7 @@ a{
 
 /* TOP of home page */
 .top-container{
-    background:#F0F0F0; 
+    background:#F0F0F0;
 
 }
 
@@ -129,11 +129,11 @@ li a:hover{
     color: grey;
 
 }
-.navbar ul li i.fas{
+ .navbar ul li i.fas{
     width:35px;
-    vertical-align: middle;
     display: block;
-}
+    
+} 
 
 
 
@@ -142,7 +142,7 @@ li a:hover{
     top:3.0em;  
     right: 0.1em;
     display:flex;
-    background: #fff;
+   background: #fff;
     box-shadow: 0 0 10px rgba(0,0,0,0.25);
     border-radius: 15px;
     margin-bottom: -3em;
@@ -150,10 +150,17 @@ li a:hover{
     
 }
 
-.navbar .profile-dropdown .profile-menu .profile-menu-right li{
-  
-  display: block;
+/* .navbar .profile-dropdown .profile-menu .profile-menu-right li{  
+     display:inline-block;
+     padding:0;
+     
+      background-color: #aa00ff;
+} */
+
+.navbar .profile-menu .profile-menu-right{
+   padding:10px 10px;
 }
+
 
 
 .navbar .profile-menu .profile-menu-left{
@@ -169,13 +176,10 @@ li a:hover{
 }
 
 
-.navbar .profile-menu .profile-menu-right{
-    padding: 15px 20px;
-}
 
 
 .navbar .profile-menu li{
-    margin-bottom: 10px;
+    margin-bottom: 5px;
     color: #868686;
 }
 
