--- a/css/styling.css
+++ b/css/styling.css
@@ -13,7 +13,7 @@ body{
 }
 
 a{
-    color:#191919;
+    color: black;
     text-decoration: none;
 }
 
@@ -49,6 +49,7 @@ footer{
 
 
 /* search bar */
+
 .search-container{
     margin: 0 auto;
     background: white;
@@ -107,7 +108,7 @@ footer{
 
 
 li a {
-    color: #000;
+    /* color: #000; */
     padding: 1.5em;
     text-decoration: none;
     
@@ -179,7 +180,7 @@ li a:hover{
 
 
 .navbar .profile-menu li{
-    margin-bottom: 5px;
+    /* margin-bottom: 5px; */
     color: #868686;
 }
 
