--- a/css/view.css
+++ b/css/view.css
@@ -23,3 +23,16 @@ video{
     transform: rotateY(180deg);
 }
 
+
+/*Popup Modal*/
+.popup-outer-panel {
+    
+    /* position: absolute;
+    top:0;*/
+    width: 100px;
+    height: 100px; 
+    background-color: red;
+    /* opacity: 0.7; */
+    cursor: pointer;
+
+}
