--- a/css/styling.css
+++ b/css/styling.css
@@ -13,13 +13,13 @@ body{
 }
 
 a{
-    color: black;
+    color:#191919;
     text-decoration: none;
 }
 
 /* TOP of home page */
 .top-container{
-    background:#F0F0F0;
+    background:#F0F0F0; 
 
 }
 
@@ -49,7 +49,6 @@ footer{
 
 
 /* search bar */
-
 .search-container{
     margin: 0 auto;
     background: white;
@@ -108,7 +107,7 @@ footer{
 
 
 li a {
-    /* color: #000; */
+    color: #000;
     padding: 1.5em;
     text-decoration: none;
     
@@ -130,11 +129,11 @@ li a:hover{
     color: grey;
 
 }
- .navbar ul li i.fas{
+.navbar ul li i.fas{
     width:35px;
+    vertical-align: middle;
     display: block;
-    
-} 
+}
 
 
 
@@ -143,7 +142,7 @@ li a:hover{
     top:3.0em;  
     right: 0.1em;
     display:flex;
-   background: #fff;
+    background: #fff;
     box-shadow: 0 0 10px rgba(0,0,0,0.25);
     border-radius: 15px;
     margin-bottom: -3em;
@@ -151,17 +150,10 @@ li a:hover{
     
 }
 
-/* .navbar .profile-dropdown .profile-menu .profile-menu-right li{  
-     display:inline-block;
-     padding:0;
-     
-      background-color: #aa00ff;
-} */
-
-.navbar .profile-menu .profile-menu-right{
-   padding:10px 10px;
+.navbar .profile-dropdown .profile-menu .profile-menu-right li{
+  
+  display: block;
 }
-
 
 
 .navbar .profile-menu .profile-menu-left{
@@ -177,10 +169,13 @@ li a:hover{
 }
 
 
+.navbar .profile-menu .profile-menu-right{
+    padding: 15px 20px;
+}
 
 
 .navbar .profile-menu li{
-    /* margin-bottom: 5px; */
+    margin-bottom: 10px;
     color: #868686;
 }
 
@@ -211,3 +206,17 @@ margin of 4em from the top(relative to class top)
 }
 
 
+/*view page*/
+.video-container{
+    display: flex;
+    justify-content: center;
+    width:100%;    
+}
+video{
+        max-width: 850px;
+        outline: none;
+}
+
+.video-content{
+   margin-left:100px;
+}
