--- a/css/user_profile.css
+++ b/css/user_profile.css
@@ -1,275 +1,202 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
 *{
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
     font-family: "Montserrat", sans-serif;
-
-}
-body{
-    background-color: rgb(49, 49, 49);
 }
 
-
-
-.rear-container{
-    position: absolute;
-    height: 80vh;
+.main-container{
+    min-height: 90vh;
 	width: 100%;
-    /* display: grid; */
-    
-	place-items: center;
-	background-color: #e6856d;
-	background-image: url("../img/piano.jpg");
+    margin-top: 10vh;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    place-items: center;
+	/* background-image: url("../img/piano.jpg");
     background-size:cover;
-    background-position:100% 30%;
-    /* background-blend-mode:darken; */
-    /* background-position: top; */
-	color: #FFFFFF;
+    background-position:100% 30%; */
    
 }
 
-/* Transparent panel*/
-.transparent-panel{
-    position: absolute;
-    height:550px;
-    width: 700px;
-    transform: translate(60%, 20%);
-    box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
-    background-color: #ffffff;
-    filter:opacity(0.2);
-    border-radius: 20px;
-    color: #FFFFFF;
-
+.main-title {
+    font-size: 40px;
+	font-weight: bold;
 }
-/* End of transparent panel*/
 
-/*Front container*/
-.front-container{
-    position: relative;
-    height:550px;
-    width: 700px;
-    transform: translate(61%, 20%);
-    color:wheat;
-    /* color: rgb(49, 49, 49); */
-    /* background-color: #b34141; */
+.header {
+    display: inline;
+    text-align: center;
+}
+
+.title {
+    font-size: 22px;
+	font-weight: bold;
+    margin-block: 20px 10px;
+    max-width: 250px;
+}
+
+.title2 {
+    margin-bottom: 25px;
+}
+
+.title3 {
+    margin-block: 50px 25px;
+}
+
+.left-contents-panel label {
+    max-width: 250px;
+    display: block;
+}
+
+.label-p {
+    margin-bottom: 1em;
+}
+
+.left-contents-panel input {
+    background-color: #eee;
+	border-radius: 5px;
+	border: none;
+	padding: 12px 15px;
+	margin-block: 5px 10px;
+	width: 100%;
+}
+
+.left-contents-panel .resetPassword-panel input,
+.left-contents-panel .manage-wallet-panel input {
+    margin-block: 10px 20px;
+}
+
+.front-left-container {
     display: grid;
-    grid-template-columns: 2fr 1fr;
-
+    place-items: center;
 }
 
-
-/*left panel container*/
-.front-left-container{
-   position: relative;
-  
-   height: 100%;
-   width: 100%;
+.front-left-container button {
+    display: block;
+	border-radius: 10px;
+    border: 1px solid #FF4B2B;
+	background-color: #FF4B2B;
+	color: #FFFFFF;
+	font-size: 12px;
+	font-weight: bold;
+	padding: 12px 20px;
+    text-transform: uppercase;
+    transition:background-color .15s ease-in;
+    margin-top: 0.5em;
+    width: 100%;
 }
 
+.front-left-container button:active {
+	transform: scale(0.95);
+}
 
-h1{
+.front-left-container button:focus {
+	outline: none;
+}
+
+.front-left-container button:hover {
+    background-color: white;
+    color: #FF4B2B;
+}
+
+.manage-wallet-panel {
+    display: none;
+}
+
+.left-navigation-panel {
     display: flex;
-    justify-content:center;
- }
- 
- /*left panel navigation*/
- .left-navigation-panel{
-     position:relative;
-     display: flex;
-     align-items:center;
-     justify-content: space-around;
-     height:60px;
-     width: 90%;
-     background-color: blanchedalmond;
-     margin: 25px;
-     border-radius: 10px;
-     box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
-     color:black;
-     
+    justify-content: center;
+    align-items: center;
+    gap: 1em;
+    margin-block: 1em;
+}
 
- }
-
- /*Navigation buttons*/
- .navigation-button{
-    position: relative;
-    color:rgb(100, 53, 53);
+.navigation-button {
+    width: 10vw;
+    text-align: center;
     cursor: pointer;
-    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.12);
+}
 
- }
+.resetPassword-panel {
+    display: none;
+}
 
- /* .navigation-button:hover{
-    color:rgb(160, 98, 75); 
- } */
-
- .navigation-button span{
+.navigation-button span{
      position:relative;
      display: block;
-     box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
+     /* box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24); */
      transition-delay: 0.2s;
  }
 
-            /*line effect*/
- .navigation-button span:nth-child(1){
+/*line effect*/
+.navigation-button span:nth-child(1){
      top:0;
-     left:-30%;
+     left:-10%;
      width:0;
      height: 2px;
-     background: linear-gradient(90deg, transparent,rgb(160, 98, 75));
-     
+     background: linear-gradient(90deg, transparent,black);
  }
+
  .navigation-button:hover span:nth-child(1){
     width:100%;
-    left: 30%;
+    left: 10%;
+    height: 2px;
     transition: 1s;
 }
+
 .navigation-button span:nth-child(2){
     top:25px;
-    left:120%;
+    left:110%;
     height: 2px;
     width: 0;
-    background: linear-gradient(-90deg, transparent,rgb(160, 98, 75));
+    background: linear-gradient(-90deg, transparent,black);
 }
+
 .navigation-button:hover span:nth-child(2){
     transition: 1s;
     height: 2px;
     width:100%;
-    left: -30%;
+    left: -10%;
     
 }
 
- /*left panel contents*/
- .left-contents-panel{
-     position: relative;
-     height: 375px;
-     width: 90%;
-     background-color:blanchedalmond;
-     margin: 25px;
-     border-radius: 10px;
-     box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
-     color:rgb(49, 49, 49);    
+#change-personal-info-response,
+#change-password-response {
+    font-weight: 800;
+    color: #b9341d;
+    font-size: 12px;
 }
 
-/*Personal info part*/
- .personal-info-panel{
-    position: absolute;
-    /* background-color :black; */
-    height: 350px;
-    width: 88%;
-    margin: 25px;
-    /* background-color: brown; */
-   
- }
-
- .personal-info-field{
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    height: 15px;
-    width: 85%;
-    margin:27px;
-
- }
-
- .personal-info-field input{
-    
-    padding: 4px;
-    border-style: none;
-    background-color: rgb(255, 255, 255);
-    border-radius: 50px;
-    
- }
- .personal-info-field input::placeholder{
-    /* color: rgb(119, 83, 74); */
-    color:rgb(109, 68, 68);
-    text-transform: uppercase;
-    text-align: center;
-    font-weight: bold;
- }
-
- .update-info-btn{
-    text-align: center;  
- }
- 
- #update-btn{
-     
-    padding: 10px; 
-    background-color: rgb(109, 68, 68);
-    border-radius:20px;
-    color:blanchedalmond;
-    font-weight: bold;
-    cursor: pointer;
-    /* border-style: none; */
-    
- }
-
-
- /*Reset password part*/
- .resetPassword-panel{
-    position: absolute;
-    /* background-color :red; */
-    height: 350px;
-    width: 88%;
-    margin: 25px;
-   
- }
-
- /*Styling reset password panel*/
- .change-password-field{
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    /* background-color: black; */
-    height: 15px;
-    width: 75%;
-   
-    margin:40px;
-    
-}
-.change-password-field input{
-    padding: 6px;
-    border-style: none;
-    background-color: rgb(255, 255, 255);
-    border-radius: 50px; 
-}
-.change-password-field input::placeholder{
-    color:rgb(109, 68, 68);
-    text-transform: uppercase;
-    text-align: center;
-}
-
-.change-password-btn{
-    position:relative;
-    display:flex;
-    justify-content: center;
-    align-items: center;
-}
-#pw-btn{
-    padding: 10px; 
-    background-color: rgb(109, 68, 68);
-    border-radius:20px;
-    color:blanchedalmond;
-    font-weight: bold;
-    cursor: pointer;
-}
-
-
- /*right panel container*/
-.front-right-container{
-    position: relative;
-    /* background-color: #000000; */
-
+.front-right-container {
     height: 100%;
-    width:100%;
+	width: 100%;
+    display: grid;
+	place-items: center;
+	background-color: #ff947a;
+	background-image: url("../img/piano.jpg");
+    background-size: cover;
+    background-position: center;
+    background-blend-mode:multiply;
+	color: #FFFFFF;
+    text-align: center;
+}
 
+.title-right {
+	font-size: 32px;
+}
 
+.subtitle {
+	font-size: 16px;
+	font-weight: 100;
+	line-height: 20px;
+	letter-spacing: 0.5px;
+	margin: 20px 0 30px;
 }
 
 
-/*Profile picture*/
-.profile-container{
+/* Profile picture */
+/* .profile-container{
     position: relative;
     height: 170px;
     width: 170px;
@@ -278,7 +205,6 @@ h1{
     transform: translate(-50%,-50%);
     border-radius:50%;
     overflow: hidden;
-    /* border:1px solid rgb(49, 49, 49); */
     box-shadow: 0 1px 6px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
   
     
@@ -300,7 +226,6 @@ h1{
     position: absolute;
     bottom:0;
     left: 0;
-    /* transform: translateX(-50%) */
     text-align: center;
     background: rgba(0,0,0,0.7);
     color: white;
@@ -308,6 +233,6 @@ h1{
     cursor: pointer;
     display: none;
 
-}
+} */
 
 
