upload page styled + fixed unlink in admin manage video

--- a/css/user_profile.css
+++ b/css/user_profile.css
@@ -44,6 +44,10 @@
     margin-block: 50px 25px;
 }
 
+.title4 {
+    min-width: 350px;
+}
+
 .left-contents-panel label {
     max-width: 250px;
     display: block;
