--- a/includes/admin_sidebar.html
+++ b/includes/admin_sidebar.html
@@ -18,7 +18,7 @@
             <div class="item"><a href="admin_manage_reports.php"><i class="fas fa-flag"></i>Manage User Reports</a></div>
             <div class="item"><a href="admin_manage_bannedusers.php"><i class="fas fa-users-slash"></i>Manage Banned Users</a></div>
             <div class="item"><a href="generate_admin_account.php"><i class="fas fa-user-cog"></i>Generate Admin Account</a></div>
-            <div class="item"><a href="#"><i class="fas fa-file"></i>Rebuild Recommender File</a></div>
+            <!-- <div class="item"><a href="#"><i class="fas fa-file"></i>Rebuild Recommender File</a></div> -->
         </nav>
     </div>
 </body>
