--- a/css/generateAdminAccount.css
+++ b/css/generateAdminAccount.css
@@ -59,14 +59,14 @@ body {
     text-transform: uppercase;
     cursor: pointer;
     color: white;
-    background-color: #edb33d;
-    border: 2px solid #edb33d;
+    background-color: var(--color3);
+    border: 1px solid var(--color3);
     transition:background-color .15s ease-in;
 }
 
 .btn-generate:hover {
     background-color: white;
-    color: #edb33d;
+    color: var(--color3);
 }
 
 .btn-generate:active {
