--- a/css/login_style.css
+++ b/css/login_style.css
@@ -1,5 +1,13 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
 
+:root {
+    --color1: black;
+    --color2: #141414;
+    --color3: #ef9c42;
+    --color4: #e77500;
+    --color5: #cc4e01;
+}
+
 * {
 	box-sizing: border-box;
 	margin: 0;
@@ -43,7 +51,7 @@ body {
 
 button {
 	border-radius: 20px;
-	background-color: #FF4B2B;
+	background-color: var(--color5);
 	color: #FFFFFF;
 	font-size: 12px;
 	font-weight: bold;
@@ -63,11 +71,11 @@ button:focus {
 
 button:hover {
     background-color: white;
-    color: #FF4B2B;
+    color: var(--color5);
 }
 
 .log-in-btn {
-	border: 1px solid #FF4B2B;
+	border: 1px solid var(--color5);
 	margin-top: 2em;
 }
 
@@ -109,7 +117,7 @@ form {
     display: grid;
     grid-template-columns: 1fr 1fr;
 	place-items: center;
-	background-color: #fd582f;
+	background-color: var(--color5);
 	background-image: url("../img/guitar-3943201_1920.jpg");
     background-size: cover;
     background-position: left;
