--- a/css/adminAnalytics_style.css
+++ b/css/adminAnalytics_style.css
@@ -33,7 +33,7 @@ h3 {
 .card {
     padding: 2.5em 1.5em;
     border-radius: 0.75em;
-    background-color: #7d3a10ab;
+    background-color: var(--color3);
     position: relative;
     z-index: 1;
     overflow: hidden;
@@ -44,7 +44,7 @@ h3 {
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: #7d3a10d5;
+    background-color: var(--color4);
     top: 0;
     left: 0;
     border-radius: 1em;
