--- a/css/nav_styling.css
+++ b/css/nav_styling.css
@@ -1,5 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
 
+:root {
+    --color1: black;
+    --color2: #141414;
+    --color3: #ef9c42;
+    --color4: #e77500;
+    --color5: #cc4e01;
+}
+
 *{
     padding: 0;
     margin: 0;
@@ -19,7 +27,7 @@
 	position: fixed;
 	width: 100vw;
     height: 10vh;
-	background-color: #080808;
+	background-color: var(--color1);
 	display:flex;
 	align-items:center;
 	justify-content:space-between;
@@ -50,7 +58,7 @@
 }
 
 .navlinks ul li a.active{
-	color: rgb(190, 141, 67);
+	color: var(--color3);
 }
 
 .navlinks ul li a::after{
@@ -69,7 +77,7 @@
 }
 
 .navlinks ul li a.active::after{
-    background: rgb(190, 141, 67);
+    background: var(--color3);
 	width: 100%;
 }
 
@@ -160,7 +168,7 @@
 }
 
 .navbar .profile-menu .profile-menu-left{
-    background: #000;
+    background: var(--color2);
     width:max-content;
     padding: 1em  0.5em;
     border-bottom-left-radius: 15px;
