--- a/css/upload_style.css
+++ b/css/upload_style.css
@@ -104,8 +104,8 @@
 
 .submit-btn {
 	border-radius: 10px;
-    border: 1px solid #FF4B2B;
-	background-color: #FF4B2B;
+    border: 1px solid var(--color5);
+	background-color: var(--color5);
 	color: #FFFFFF;
 	font-size: 12px;
 	font-weight: bold;
@@ -125,7 +125,7 @@
 
 .submit-btn:hover {
     background-color: white;
-    color: #FF4B2B;
+    color: var(--color5);
 }
 
 .file-upload-box {
@@ -133,7 +133,7 @@
     height: 400px;
     background-color: rgba(255, 127, 80, 0.274);
     border-radius: 1em;
-    border: 2px dashed orange;
+    border: 2px dashed var(--color4);
 }
 
 .real-input-box {
@@ -160,7 +160,7 @@
 }
 
 .upload-icon {
-    color: rgb(255, 127, 80);
+    color: var(--color4);
 }
 
 .upload-box-text {
@@ -168,5 +168,5 @@
     font-weight: 800;
     width: 70%;
     text-align: center;
-    color: rgb(255, 127, 80);
+    color: var(--color4);
 }
