--- a/css/view.css
+++ b/css/view.css
@@ -75,15 +75,15 @@ video{
     font-weight: bold;
     text-transform: uppercase;
     cursor: pointer;
-    color: rgb(245, 245, 245);
-    background-color: #edb33d;
-    border: 2px solid #edb33d;
+    color: white;
+    background-color: var(--color4);
+    border: 1px solid var(--color4);
     transition:background-color .15s ease-in;
 }
 
 .admin-reject-video:hover {
-    background-color: rgb(245, 245, 245);
-    color: #edb33d;
+    background-color: white;
+    color: var(--color4);
 }
 
 .admin-reject-video:active {
@@ -158,15 +158,15 @@ video{
     font-weight: bold;
     text-transform: uppercase;
     cursor: pointer;
-    color: rgb(245, 245, 245);
-    background-color: #edb33d;
-    border: 2px solid #edb33d;
+    color: white;
+    background-color: var(--color4);
+    border: 1px solid var(--color4);
     transition:background-color .15s ease-in;
 }
 
 .comment-button button:hover {
-    background-color: rgb(245, 245, 245);
-    color: #edb33d;
+    background-color: white;
+    color: var(--color4);
 }
 
 .comment-button button:active {
@@ -219,11 +219,11 @@ video{
 }
 
 .comment-header button i {
-    color: rgb(245, 245, 245);
+    color: white;
 }
 
 .comment-header button:hover {
-    background-color: rgb(245, 245, 245);
+    background-color: white;
 }
 
 .comment-header button:hover i {
@@ -312,17 +312,17 @@ video{
     font-weight: bold;
     text-transform: uppercase;
     cursor: pointer;
-    color: rgb(245, 245, 245);
-    background-color: #edb33d;
-    border: 2px solid #edb33d;
+    color: white;
+    background-color: var(--color4);
+    border: 1px solid var(--color4);
     margin-top: 1em;
     margin-right: 1em;
     transition:background-color .15s ease-in;
 }
 
 .my-modal button:hover {
-    background-color: rgb(245, 245, 245);
-    color: #edb33d;
+    background-color: white;
+    color: var(--color4);
 }
 
 .my-modal button:active {
@@ -391,17 +391,17 @@ video{
     font-weight: bold;
     text-transform: uppercase;
     cursor: pointer;
-    color: rgb(245, 245, 245);
-    background-color: #edb33d;
-    border: 2px solid #edb33d;
+    color: white;
+    background-color: var(--color4);
+    border: 1px solid var(--color4);
     margin-top: 1em;
     margin-right: 1em;
     transition:background-color .15s ease-in;
 }
 
 .my-modal2 button:hover {
-    background-color: rgb(245, 245, 245);
-    color: #edb33d;
+    background-color: white;
+    color: var(--color4);
 }
 
 .my-modal2 button:active {
@@ -436,4 +436,12 @@ video{
 
 .midot3 {
     margin-inline: 0.5em;
+}
+
+.uploader a {
+    color: var(--color5);
+}
+
+.uploader a:hover {
+    color: var(--color3);
 }
